--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,10 @@ body {
     background-size: 100%;
 }
 
+div {
+    margin: 0;
+    padding: 0;
+}
 .header{
     width: 100%;
     height: 200px;
@@ -16,4 +20,7 @@ body {
 
 legend {
     margin-top: 20px;
+}
+.modal-backdrop {
+  z-index: -1;
 }
